# docs/swagger.json
@@ -18,7 +18,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "User"
                 ],
                 "summary": "all users",
                 "parameters": [
@@ -59,17 +59,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "User"
                 ],
                 "summary": "create a user",
                 "parameters": [
                     {
-                        "description": "Create Todo Request",
+                        "description": "Create User Request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateTodoRequest"
+                            "$ref": "#/definitions/dto.CreateUserRequest"
                         }
                     }
                 ],
@@ -85,7 +85,7 @@
         },
         "/users/{userId}": {
             "get": {
-                "description": "Todo Details",
+                "description": "User Details",
                 "consumes": [
                     "application/json"
                 ],
@@ -93,13 +93,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "User"
                 ],
                 "summary": "user details",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Todo ID",
+                        "description": "User ID",
                         "name": "userId",
                         "in": "path",
                         "required": true
@@ -123,24 +123,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "User"
                 ],
                 "summary": "update a user",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Todo ID",
+                        "description": "User ID",
                         "name": "userId",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Update Todo Request",
+                        "description": "Update User Request",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateTodoRequest"
+                            "$ref": "#/definitions/dto.UpdateUserRequest"
                         }
                     }
                 ],
@@ -162,13 +162,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Todo"
+                    "User"
                 ],
                 "summary": "delete a user",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "Todo ID",
+                        "description": "User ID",
                         "name": "userId",
                         "in": "path",
                         "required": true
@@ -186,7 +186,7 @@
         }
     },
     "definitions": {
-        "dto.CreateTodoRequest": {
+        "dto.CreateUserRequest": {
             "type": "object",
             "required": [
                 "status",
@@ -209,7 +209,7 @@
                 }
             }
         },
-        "dto.UpdateTodoRequest": {
+        "dto.UpdateUserRequest": {
             "type": "object",
             "required": [
                 "status",
