# src/user/controllers/UserController.go
@@ -9,11 +9,11 @@ import (
 	"github.com/shipu/artifact"
 )
 
-// TodoIndex
+// UserIndex
 // @Summary  all users
 // @Schemes
 // @Description  All users
-// @Tags         Todo
+// @Tags         User
 // @Accept       json
 // @Produce      json
 // @Param        page    query  string  false  "Page"
@@ -22,7 +22,7 @@ import (
 // @Success      200
 // @Failure      401
 // @Router       /users [get]
-func TodoIndex() gin.HandlerFunc {
+func UserIndex() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		page := c.DefaultQuery("page", "1")
 		limit := c.DefaultQuery("limit", "10")
@@ -33,7 +33,7 @@ func TodoIndex() gin.HandlerFunc {
 		filter["limit"] = limit
 		filter["status"] = status
 
-		users, paginate := services.AllTodo(filter)
+		users, paginate := services.AllUser(filter)
 
 		artifact.Res.Code(200).Data(users).Raw(map[string]interface{}{
 			"meta": paginate,
@@ -41,20 +41,20 @@ func TodoIndex() gin.HandlerFunc {
 	}
 }
 
-// TodoCreate
+// UserCreate
 // @Summary  create a user
 // @Schemes
 // @Description  create a user
-// @Tags         Todo
+// @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        request  body  dto.CreateTodoRequest  true  "Create Todo Request"
+// @Param        request  body  dto.CreateUserRequest  true  "Create User Request"
 // @Success      200
 // @Failure      401
 // @Router       /users [post]
-func TodoCreate() gin.HandlerFunc {
+func UserCreate() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var createTodo dto.CreateTodoRequest
+		var createUser dto.CreateUserRequest
 
 		defer func() {
 			if err := recover(); err != nil {
@@ -62,29 +62,29 @@ func TodoCreate() gin.HandlerFunc {
 			}
 		}()
 
-		if err := c.ShouldBind(&createTodo); err != nil {
+		if err := c.ShouldBind(&createUser); err != nil {
 			artifact.Res.Code(http.StatusBadRequest).Message("Bad Request").Data(err.Error()).AbortWithStatusJSON(c)
 			return
 		}
 
-		user := services.CreateATodo(createTodo)
+		user := services.CreateAUser(createUser)
 
 		artifact.Res.Code(http.StatusCreated).Message("success").Data(user).Json(c)
 	}
 }
 
-// TodoShow
+// UserShow
 // @Summary  user details
 // @Schemes
-// @Description  Todo Details
-// @Tags         Todo
+// @Description  User Details
+// @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        userId  path  string  true  "Todo ID"
+// @Param        userId  path  string  true  "User ID"
 // @Success      200
 // @Failure      401
 // @Router       /users/{userId} [get]
-func TodoShow() gin.HandlerFunc {
+func UserShow() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		defer func() {
 			if err := recover(); err != nil {
@@ -94,27 +94,27 @@ func TodoShow() gin.HandlerFunc {
 
 		userId := c.Param("userId")
 
-		user := services.ATodo(userId)
+		user := services.AUser(userId)
 
 		artifact.Res.Code(http.StatusOK).Message("success").Data(user).Json(c)
 	}
 }
 
-// TodoUpdate
+// UserUpdate
 // @Summary  update a user
 // @Schemes
 // @Description  update a user
-// @Tags         Todo
+// @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        userId   path  string                 true  "Todo ID"
-// @Param        request  body  dto.UpdateTodoRequest  true  "Update Todo Request"
+// @Param        userId   path  string                 true  "User ID"
+// @Param        request  body  dto.UpdateUserRequest  true  "Update User Request"
 // @Success      200
 // @Failure      401
 // @Router       /users/{userId} [put]
-func TodoUpdate() gin.HandlerFunc {
+func UserUpdate() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		var updateTodo dto.UpdateTodoRequest
+		var updateUser dto.UpdateUserRequest
 
 		defer func() {
 			if err := recover(); err != nil {
@@ -124,12 +124,12 @@ func TodoUpdate() gin.HandlerFunc {
 
 		userId := c.Param("userId")
 
-		if err := c.ShouldBind(&updateTodo); err != nil {
+		if err := c.ShouldBind(&updateUser); err != nil {
 			artifact.Res.Code(http.StatusBadRequest).Message(http.StatusText(http.StatusBadRequest)).Data(err.Error()).AbortWithStatusJSON(c)
 			return
 		}
 
-		user, err := services.UpdateATodo(userId, updateTodo)
+		user, err := services.UpdateAUser(userId, updateUser)
 
 		if err != nil {
 			artifact.Res.Code(http.StatusInternalServerError).Message(http.StatusText(http.StatusInternalServerError)).Json(c)
@@ -140,18 +140,18 @@ func TodoUpdate() gin.HandlerFunc {
 	}
 }
 
-// TodoDelete
+// UserDelete
 // @Summary  delete a user
 // @Schemes
 // @Description  delete a user
-// @Tags         Todo
+// @Tags         User
 // @Accept       json
 // @Produce      json
-// @Param        userId  path  string  true  "Todo ID"
+// @Param        userId  path  string  true  "User ID"
 // @Success      200
 // @Failure      422
 // @Router       /users/{userId} [delete]
-func TodoDelete() gin.HandlerFunc {
+func UserDelete() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		defer func() {
 			if err := recover(); err != nil {
@@ -160,7 +160,7 @@ func TodoDelete() gin.HandlerFunc {
 		}()
 
 		userId := c.Param("userId")
-		err := services.DeleteATodo(userId)
+		err := services.DeleteAUser(userId)
 
 		if !err {
 			artifact.Res.Code(http.StatusInternalServerError).Message("something wrong").Json(c)
