# src/user/dto/UserDto.go
@@ -1,17 +1,17 @@
 package dto
 
-// swagger:parameters CreateTodoRequest
-type CreateTodoRequest struct {
+// swagger:parameters CreateUserRequest
+type CreateUserRequest struct {
 	// required: true
 	Task string `form:"task" json:"task" xml:"task"  binding:"required,min=1,max=300"`
 	// required: true
 	Status string `form:"status" json:"status" xml:"status"  binding:"required,oneof=active inactive"`
 }
 
-// swagger:parameters UpdateTodoRequest
-type UpdateTodoRequest struct {
+// swagger:parameters UpdateUserRequest
+type UpdateUserRequest struct {
 	// required: true
-    Task string `form:"task" json:"task" xml:"task"  binding:"required,min=1,max=300"`
-    // required: true
-    Status string `form:"status" json:"status" xml:"status"  binding:"required,oneof=active inactive"`
+	Task string `form:"task" json:"task" xml:"task"  binding:"required,min=1,max=300"`
+	// required: true
+	Status string `form:"status" json:"status" xml:"status"  binding:"required,oneof=active inactive"`
 }
